--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <div class="profile">
     <h2>Project Info</h2>
     <p><strong>Project Title:</strong> Task Tracker Web App</p>
-    <p><strong>Your Name:</strong> John Doe</p>
-    <p><strong>GitHub Username:</strong> johndoe</p>
-    <p><strong>edX Username:</strong> johndoe_edx</p>
-    <p><strong>City:</strong> New York, USA</p>
+    <p><strong>Your Name:</strong> Nafisa Samah</p>
+    <p><strong>GitHub Username:</strong> NafisaSamah3</p>
+    <p><strong>edX Username:</strong> NafisaSamah3</p>
+    <p><strong>City:</strong> Mangalore, India</p>
     <p><strong>Date:</strong> November 17, 2024</p>
   </div>
 
